# metadata_extraction_and_image_analysis_system

./: .dockerignore  .gitignore  .gitkeep  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXIFTOOL_INSTALLATION.md  LICENSE  MANIFEST.in  METAFORENSIC_AI_SYSTEM_PROMPT.md  README.md  analyze_ai_evidence.py  create_gps_test_image.py  debug_gps.py  docker_compose.yml  forensicai.py  main.py  pyproject.toml  requirements.txt  setup.py  test_exiftool_wrapper.py  test_gps_resolution.py  verify_advanced.py  verify_api.py  verify_cross_case.py  verify_gps_location.py  verify_phase3.py
ai/: app.py  copy_move_detection.py  deepfake_detection.py  exif_timeline.py  explainability.py  inference.py  lighting_consistency.py  location_inference.py  object_detection.py  priority_scoring.py  prnu_analysis.py  social_media_analyzer.py
config/: __init__.py  default_config.yaml
extractor/: exif_extractor.py
features/: feature_engineering.py
final_narrative_results/: china_20260208_204521.html  china_20260208_204521.json
forensic_results/: china_14_point_audit.json  china_15_point_audit.json  china_comprehensive_metadata.json  phase3_enterprise_audit.json
image_analysis/: image_features.py
preprocessing/: normalizer.py
reports/: forensic_report.py
results/: README.md
results/exports/: README.md
results/exports/csv/: README.md
results/exports/xml/: README.md
results/reports/: ai_generated_evidence_20260208_230202.txt  china_20260208_221836.txt  china_20260208_221911.txt  china_20260208_221945.txt  china_20260208_224518.html
results/reports/html/: README.md
results/reports/json/: README.md
root/: __init__.py
scripts/: create_results_structure.py  install_dependencies.sh  setup_forensic_env.py
scripts/analysis/: analyze_ai_evidence.py
scripts/verification/: verify_api.py
src/: __init__.py  dataset_manager.py  main.py
src/analysis/: __init__.py  bayesian_scorer.py  contextual_analyzer.py  cross_case_correlator.py  evidence_correlator.py  risk_scorer.py  timestamp_analyzer.py
src/core/: __init__.py  evidence_handler.py  forensic_analyzer.py  forensic_domain_manager.py  metadata_extractor.py  origin_detector.py
src/explanation/: explanation_engine.py
src/interface/: cli_assistant.py  forensic_api.py  natural_language_processor.py  web_interface.py
src/reporting/: report_generator.py
src/utils/: exiftool_formatter.py  exiftool_wrapper.py  forensic_db.py  gps_resolver.py
tests/: test_evidence_handler.py  test_integration.py  test_origin_detector.py  test_risk_scorer.py
